Lyrics search command

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 *.bat
 config.json
 database.db
+app/geckodriver.log
+
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
